removed links temporarily

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 		<!-- <h1 id = "header"> welcome to cookie's jar welcome to cookie's jar welcome to cookie's jar welcome to </h1> -->
         <img id="bg-img" src="" alt="">
         <img id="header-img" src="img_assets/good.png" alt="distorted photo of courtney taken from a higher angle">
+        <!-- Image credit goes to Russa https://twitter.com/russa095-->
         <h2 id="handle"> @courtneyy_ngg </h2>
 
 		<div class="container">
             <div class="center">
                 <ul class="list" style="list-style:none;">
-                    <li><a href="https://courtneyng.github.io/" class="button button-shadow"> personal web </a></li>
-                    <li><a href="#" class="button button-shadow"> linkedin </a></li>
-                    <li><a href="#" class="button button-shadow"> test button </a></li>
-                    <li><a href="#" class="button button-shadow"> test button </a></li>
-                    <li><a href="#" class="button button-shadow"> test button </a></li>
+                    <li><a href="#" class="button button-shadow"> tbd </a></li>
+                    <li><a href="#" class="button button-shadow"> tbd </a></li>
+                    <li><a href="#" class="button button-shadow"> tbd </a></li>
+                    <li><a href="#" class="button button-shadow"> tbd </a></li>
+                    <li><a href="#" class="button button-shadow"> tbd </a></li>
                 </ul>
             </div>
         </div>
