--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+
 		<title> Courtney Ng </title>
 		<link rel="stylesheet" href="style.css" type="text/css">
 		<script src="script.js"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 	<body>
