--- a/index.html
+++ b/index.html
@@ -10,30 +10,27 @@
 	</head>
 
 	<body>
-			  
-		<!-- <h1 id = "header"> welcome to cookie's jar welcome to cookie's jar welcome to cookie's jar welcome to </h1> -->
-        <img id="bg-img" src="" alt="">
-        <img class="header-img" src="img_assets/good.png" alt="distorted photo of courtney taken from a higher angle">
-        <!-- Image credit goes to Russa https://twitter.com/russa095-->
-        <h2 id="handle"> @courtneyy_ngg </h2>
+        <div class="content-wrap">
+            <div class="content">
+                <!-- <h1 id = "header"> welcome to cookie's jar welcome to cookie's jar welcome to cookie's jar welcome to </h1> -->
+                <img class="header-img" src="img_assets/good.png" alt="cartoon look alike of courtney created on picrew using Russa444's art">
+                <!-- Image credit goes to Russa https://twitter.com/russa095-->
+                <h2 id="handle"> @courtneyy_ngg </h2>
 
-		<div class="container">
-            <ul class="list" style="list-style:none;">
-                <li><a href="#" class="button button-shadow"> personal website (tba) </a></li>
-                <li><a href="#" class="button button-shadow"> watch party blog (coming soon) </a></li>
-                <li><a href="#" class="button button-shadow"> professional blog (coming soon) </a></li>
-                <li><a href="#" class="button button-shadow"> tbd </a></li>
-                <li><a href="#" class="button button-shadow"> tbd </a></li>
-            </ul>
+                <div class="container">
+                    <ul class="list" style="list-style:none;">
+                        <li><a href="#" class="button button-shadow"> personal website (tba) </a></li>
+                        <li><a href="#" class="button button-shadow"> watch party blog (coming soon) </a></li>
+                        <li><a href="#" class="button button-shadow"> professional blog (coming soon) </a></li>
+                    </ul>
+                </div>
+
+                <p id="end-card"> created by courtney </p> 
+                <p id="end-heart"> &#10084 </p> <!-- &#10084 is heart emoticon -->
+
+                <!--Photo by <a href="https://unsplash.com/@a2eorigins?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Alex Perez</a> on 
+                    <a href="https://unsplash.com/s/photos/red?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+            </div>
         </div>
-
-        
-
-        <p id="end-card"> created by courtney </p> 
-        <p id="end-heart"> &#10084 </p> <!-- &#10084 is heart emoticon -->
-
-
-
-
 	</body>
 </html>
