--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
                     </ul>
                 </div>
 
+                <div class="socials">
+                    <span id="left"><a href="https://www.instagram.com/courtneyy_ngg/" target="blank_"><img id = "leftWidth" src="img_assets/insta.png" alt = "Instagram"></a></span>
+                    <span id="center"><a href="https://github.com/courtneyng" target="blank_"><img id = "centerWidth" src="img_assets/github.png" alt = "Github"></a></span>
+                    <span id="right"><a href="https://www.linkedin.com/in/courtneyngg/" target="blank_"><img id = "rightWidth"src="img_assets/linkedin.png" alt = "LinkedIn"></a></span>
+                </div>
+
                 <p id="end-card"> created by courtney </p> 
                 <p id="end-heart"> &#10084 </p> <!-- &#10084 is heart emoticon -->
 
+                <!-- Credits -->
                 <!--Photo by <a href="https://unsplash.com/@a2eorigins?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Alex Perez</a> on 
                     <a href="https://unsplash.com/s/photos/red?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+                <!-- <a href="https://www.flaticon.com/free-icons/instagram" title="instagram icons">Instagram icons created by Grow studio - Flaticon</a> -->
+                <!-- <a href="https://www.flaticon.com/free-icons/linkedin" title="linkedin icons">Linkedin icons created by Freepik - Flaticon</a>-->
+                <!-- <a href="https://www.flaticon.com/free-icons/github" title="github icons">Github icons created by Freepik - Flaticon</a> -->
             </div>
         </div>
 	</body>
