--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 
                 <div class="container">
                     <ul class="list" style="list-style:none;">
-                        <li><a href="#" class="button button-shadow"> personal website (tba) </a></li>
+                        <li><a href="https://courtneyng.github.io/" class="button button-shadow"> personal website (under construction) </a></li>
                         <li><a href="#" class="button button-shadow"> watch party blog (coming soon) </a></li>
                         <li><a href="#" class="button button-shadow"> professional blog (coming soon) </a></li>
+                        <li><a href="#" class="button button-shadow"> photo gallery (coming soon) </a></li>
+                        <li><a href="#" class="button button-shadow"> playlists (coming soon) </a></li>
                     </ul>
                 </div>
 
