--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <!-- <h1 id = "header"> welcome to cookie's jar welcome to cookie's jar welcome to cookie's jar welcome to </h1> -->
             <img class="header-img" src="img_assets/good.png" alt="cartoon look alike of courtney created on picrew using Russa444's art">
             <!-- Image credit goes to Russa https://twitter.com/russa095-->
-            <h2 id="handle"> @courtneyy_ngg </h2>
+            <h2 id="handle"> @courtneyjng </h2>
 
             <div class="container">
                 <ul class="list" style="list-style:none;">
-                    <li><a href="https://courtneyng.github.io/" class="button button-shadow"> personal website </a></li>
-                    <li><a href="https://courtneyng.github.io/snap/" class="button button-shadow"> photo gallery </a></li>
+                    <li><a href="#" class="button button-shadow"> personal website (under construction) </a></li>
+                    <li><a href="#" class="button button-shadow"> photo gallery (under construction) </a></li>
                     <li><a href="#" class="button button-shadow"> watch party blog (coming soon) </a></li>
                     <li><a href="#" class="button button-shadow"> professional blog (coming soon) </a></li>
                     <li><a href="#" class="button button-shadow"> playlists (coming soon) </a></li>
@@ -27,6 +27,7 @@
 
             <div class="socials">
                 <span id="left"><a href="https://www.instagram.com/courtneyy_ngg/" target="blank_"><img id = "leftWidth" src="img_assets/insta.png" alt = "Instagram"></a></span>
+                <span id="left"><a href="https://open.spotify.com/user/1288533858?si=8a314cd34c2f4ead" target="blank_"><img id = "leftWidth" src="img_assets/Spotify_Primary_Logo_RGB_Green.png" alt = "Instagram"></a></span>
                 <span id="center"><a href="https://github.com/courtneyng" target="blank_"><img id = "centerWidth" src="img_assets/github.png" alt = "Github"></a></span>
                 <span id="right"><a href="https://www.linkedin.com/in/courtneyngg/" target="blank_"><img id = "rightWidth"src="img_assets/linkedin.png" alt = "LinkedIn"></a></span>
             </div>
